--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Restart Traefik
   community.docker.docker_compose_v2:
-    project_src: "{{ install_dir }}"
+    project_src: "{{ traefik_install_dir }}"
     state: restarted
   listen: "Restart Traefik"
